@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.h,v 1.22.2.15 2004/02/05 16:20:12 mike Exp $"
+ * "$Id: printers.h,v 1.22.2.16 2004/06/28 23:35:10 mike Exp $"
  *
  *   Printer definitions for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -86,10 +86,15 @@ typedef struct printer_str
  * Globals...
  */
 
-VAR ipp_t		*CommonData VALUE(NULL);/* Common printer object attrs */
-VAR printer_t		*Printers VALUE(NULL);	/* Printer list */
+VAR ipp_t		*CommonData	VALUE(NULL);
+					/* Common printer object attrs */
+VAR int			NumPrinters	VALUE(0);
+					/* Number of printers */
+VAR printer_t		*Printers	VALUE(NULL);
+					/* Printer list */
 VAR printer_t		*DefaultPrinter VALUE(NULL);
-						/* Default printer */
+					/* Default printer */
+
 
 /*
  * Prototypes...
@@ -126,5 +131,5 @@ extern void		WritePrintcap(void);
 
 
 /*
- * End of "$Id: printers.h,v 1.22.2.15 2004/02/05 16:20:12 mike Exp $".
+ * End of "$Id: printers.h,v 1.22.2.16 2004/06/28 23:35:10 mike Exp $".
  */
